--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ esp-idf-sys = { version = "0.33", default-features = false }
 esp-idf-hal = { version = "0.41", optional = true, default-features = false }
 esp-idf-svc = { version = "0.46", optional = true, default-features = false }
 embedded-svc = { version = "0.25", optional = true, default-features = false }
+ssd1306 = "0.8.2"
+embedded-graphics = "0.8.1"
 
 [build-dependencies]
 embuild = "0.31.2"
